# bot

./: Makefile  pyproject.toml
bot/: bot.py
scripts/: add.sh  clear.sh  install.sh  remove.sh  ruff.sh  run.sh  update.sh
