[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["rodfer0x80 <rodrigolf080@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
utils = {git = "https://github.com/halfass-it/utils.git"}


jsonargparse = "^4.30.0"
psutil = "^6.0.0"
pillow = "^10.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "bin.__main__:main"
